Revert "Update index.html"
This reverts commit f5a3c13718b36b8e5ef2aeb3f6e3f4cdb23dba37.

--- a/index.html
+++ b/index.html
@@ -89,10 +89,10 @@
     <h2 class="w3-wide w3-center">HACKATHONS!</h2>
     <p class="w3-opacity w3-center"><i>Won some lost many</i></p><br>
 
-    <div class="w3-grid-container w3-row-padding w3-padding-32" style="margin:0 -16px; height:100%">
+    <div class="w3-grid-container w3-row-padding w3-padding-32" style="margin:0 -16px">
       <div class="w3-third w3-margin-bottom">
         <img src="/images/SCL2.jpeg" alt="New York" style="width:100%" class="w3-hover-opacity">
-        <div class="w3-container w3-white">
+        <div class="w3-container w3-white" style="padding-bottom: 20px;">
           <p><b>Shopee Code League 2022</b></p>
           <p class="w3-opacity">Shopee</p>
           <p>Algorithm Challenge. Python and Java. BFS, DFS, Dijkstra, Greedy, 
@@ -102,7 +102,7 @@
       </div>
       <div class="w3-third w3-margin-bottom">
         <img src="/images/INTU.png" alt="New York" style="width:100%" class="w3-hover-opacity">
-        <div class="w3-container w3-white">
+        <div class="w3-container w3-white" style="padding-bottom: 20px;">
           <p><b>INTUITION</b></p>
           <p class="w3-opacity">IEEE INTUITION v8.0 2022</p>
           <p>Group name: MC for ART. Telegram bot with google script API. CNN model launched in google cloud, 
@@ -112,7 +112,7 @@
       </div>
       <div class="w3-third w3-margin-bottom">
         <img src="/images/DSTA.png" alt="New York" style="width:100%" class="w3-hover-opacity">
-        <div class="w3-container w3-white">
+        <div class="w3-container w3-white" style="padding-bottom: 20px;">
           <p><b>Today-I-Learned</b></p>
           <p class="w3-opacity">DSTA, BRAINHACK 2021</p>
           <p>Data preperation and cleaning, modified parameters for optimization. 
@@ -132,7 +132,7 @@
     <div class="w3-row-padding w3-padding-32" style="margin:0 -16px">
       <div class="w3-third w3-margin-bottom">
         <img src="/images/TicTacToe.png" alt="New York" style="width:100%" class="w3-hover-opacity">
-        <div class="w3-container w3-white">
+        <div class="w3-container w3-white" style="padding-bottom: 20px;">
           <p><b>Tic-Tac-Toe</b></p>
           <p class="w3-opacity">CS50x Harvard, Cambridge</p>
           <p>Utilized Object Oriented Programming skills and built self-made sprites.(C,Love2D,Lua)</p>
@@ -142,7 +142,7 @@
       </div>
       <div class="w3-third w3-margin-bottom">
         <img src="/images/Sudoku.jpeg" alt="Paris" style="width:100%" class="w3-hover-opacity">
-        <div class="w3-container w3-white">
+        <div class="w3-container w3-white" style="padding-bottom: 20px;">
           <p><b>Sudoku Auto-generation</b></p>
           <p class="w3-opacity">NTU</p>
           <p>Customized Graphic User Interface. Created a puzzle generation feature.(Java)</p>
@@ -151,7 +151,7 @@
       </div>
       <div class="w3-third w3-margin-bottom">
         <img src="/images/CrossyRoad.png" alt="San Francisco" style="width:100%" class="w3-hover-opacity">
-        <div class="w3-container w3-white">
+        <div class="w3-container w3-white" style="padding-bottom: 20px;">
           <p><b>Crossy Road</b></p>
           <p class="w3-opacity">NTU</p>
           <p>Modelled movements with C# scripts and appearance with Blender.(UNITY3D, Blender, C#)</p>
@@ -163,7 +163,7 @@
     <div class="w3-row-padding w3-padding-32" style="margin:0 -16px">
       <div class="w3-third w3-margin-bottom">
         <img src="/images/ECommerce.jpg" alt="New York" style="width:100%" class="w3-hover-opacity">
-        <div class="w3-container w3-white">
+        <div class="w3-container w3-white" style="padding-bottom: 20px;">
           <p><b>E-commerce Website</b></p>
           <p class="w3-opacity">NTU</p>
           <p>MYSQL DataBase. Apache Tomcat servlets.(Apache Tomcat, JavaScript, HTML, CSS, MYSQL)</p>
@@ -172,7 +172,7 @@
       </div>
       <div class="w3-third w3-margin-bottom">
         <img src="/images/AndroidStudio.jpeg" alt="Paris" style="width:100%" class="w3-hover-opacity">
-        <div class="w3-container w3-white">
+        <div class="w3-container w3-white" style="padding-bottom: 20px;">
           <p><b>Covid-19 Application</b></p>
           <p class="w3-opacity">NTU</p>
           <p>Firebase. MySQL DataBase. Linked pages with Apache Tomcat Servlets through IP configuration.(Android Studio, Kotlin, FireBase)</p>
@@ -181,7 +181,7 @@
       </div>
       <div class="w3-third w3-margin-bottom">
         <img src="/images/Twilio.png" alt="San Francisco" style="width:100%" class="w3-hover-opacity">
-        <div class="w3-container w3-white">
+        <div class="w3-container w3-white" style="padding-bottom: 20px;">
           <p><b>Twilio Chatbot</b></p>
           <p class="w3-opacity">Personal</p>
           <p>Spring Framework with BootStrap, Postgres DataBase and Twilio interface.</p>
@@ -198,7 +198,7 @@
     <p class="w3-opacity w3-center"><i>The all seeing eye of Coding</i></p><br>
 
     <div class="w3-row-padding w3-padding-32" style="margin:0 -16px">
-      <div class="w3-third w3-margin-bottom">
+      <div class="w3-third w3-margin-bottom" style="padding-bottom: 20px;">
         <img src="/images/AiTestKitchen.png" alt="Paris" style="width:100%" class="w3-hover-opacity">
         <div class="w3-container w3-white">
           <p><b>AI Test Kitchen</b></p>
@@ -209,7 +209,7 @@
       </div>
       <div class="w3-third w3-margin-bottom">
         <img src="/images/NotNowLizards.jpeg" alt="Paris" style="width:100%" class="w3-hover-opacity">
-        <div class="w3-container w3-white">
+        <div class="w3-container w3-white" style="padding-bottom: 20px;">
           <p><b>Not now lizards!</b></p>
           <p class="w3-opacity">MLDA</p>
           <p>Computer Vision, Arduino, ROS</p>
@@ -218,7 +218,7 @@
       </div>
       <div class="w3-third w3-margin-bottom">
         <img src="/images/Titanic.png" alt="San Francisco" style="width:100%" class="w3-hover-opacity">
-        <div class="w3-container w3-white">
+        <div class="w3-container w3-white" style="padding-bottom: 20px;">
           <p><b>Titanic Disaster Prediction</b></p>
           <p class="w3-opacity"></p>
           <p>ML models, Data cleaning, Variance Testing, Feature engineering, AutoML TPOT</p>
@@ -230,7 +230,7 @@
     <div class="w3-row-padding w3-padding-32" style="margin:0 -16px">
       <div class="w3-third w3-margin-bottom">
         <img src="/images/MediaPipe.png" alt="San Francisco" style="width:100%" class="w3-hover-opacity">
-        <div class="w3-container w3-white">
+        <div class="w3-container w3-white" style="padding-bottom: 20px;">
           <p><b>Basic MediaPipe</b></p>
           <p class="w3-opacity"></p>
           <p>Computer Vision</p>
