--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
     <h2 class="w3-wide w3-center">HACKATHONS!</h2>
     <p class="w3-opacity w3-center"><i>Won some lost many</i></p><br>
 
-    <div class="w3-grid-container w3-row-padding w3-padding-32" style="margin:0 -16px">
+    <div class="w3-row-padding" style="margin:20px">
       <div class="w3-third w3-margin-bottom">
         <img src="/images/SCL2.jpeg" alt="New York" style="width:100%" class="w3-hover-opacity">
         <div class="w3-container w3-white">
