--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
     <div class="w3-row-padding w3-padding-32" style="margin:0 -16px">
       <div class="w3-third w3-margin-bottom">
         <img src="/images/SCL2.jpeg" alt="New York" style="width:100%" class="w3-hover-opacity">
-        <div class="w3-container w3-white">
+        <div class="w3-container w3-white" style="padding-bottom:10px ;">
           <p><b>Shopee Code League 2022</b></p>
           <p class="w3-opacity">Shopee</p>
           <p>Algorithm Challenge. Python and Java. BFS, DFS, Dijkstra, Greedy, 
