--- a/index.html
+++ b/index.html
@@ -92,12 +92,12 @@
     <div class="w3-row-padding w3-padding-32" style="margin:0 -16px">
       <div class="w3-third w3-margin-bottom">
         <img src="/images/SCL2.jpeg" alt="New York" style="width:100%" class="w3-hover-opacity">
-        <div class="w3-container w3-white" style="padding-bottom:10px ;">
+        <div class="w3-container w3-white" style="padding-bottom:20px;">
           <p><b>Shopee Code League 2022</b></p>
           <p class="w3-opacity">Shopee</p>
           <p>Algorithm Challenge. Python and Java. BFS, DFS, Dijkstra, Greedy, 
             Longest common Subsequence. Participation. </p>
-          <a href="https://drive.google.com/file/d/1jW_Wr0YYpkZ3CUhi3cTAJGMwhrthuwLq/view?usp=sharing" class="w3-bar-item w3-button w3-black w3-margin-bottom">View Certificate</a>
+          <a href="https://drive.google.com/file/d/1jW_Wr0YYpkZ3CUhi3cTAJGMwhrthuwLq/view?usp=sharing" class="w3-bar-item w3-button w3-black w3-margin-top">View Certificate</a>
         </div>
       </div>
       <div class="w3-third w3-margin-bottom">
@@ -107,7 +107,7 @@
           <p class="w3-opacity">IEEE INTUITION v8.0 2022</p>
           <p>Group name: MC for ART. Telegram bot with google script API. CNN model launched in google cloud, 
             Image Classification, Keras image processing. First Place in Healthcare Category.</p>
-          <a href="https://drive.google.com/file/d/19cagHFVPoFpJ2CEOB6sP_PVJudmpgT_9/view" class="w3-bar-item w3-button w3-black w3-margin-bottom">View Certificate</a>
+          <a href="https://drive.google.com/file/d/19cagHFVPoFpJ2CEOB6sP_PVJudmpgT_9/view" class="w3-bar-item w3-button w3-black w3-margin-top">View Certificate</a>
         </div>
       </div>
       <div class="w3-third w3-margin-bottom">
@@ -117,7 +117,7 @@
           <p class="w3-opacity">DSTA, BRAINHACK 2021</p>
           <p>Data preperation and cleaning, modified parameters for optimization. 
             Utilized OpenCV and RESNET for our model to identify objects from Datasets. Ninth Overall</p>
-          <a href="https://drive.google.com/file/d/1sJ4p2BCACl4KUlsreoNjLHT9EU8xatW3/view?usp=sharing" class="w3-bar-item w3-button w3-black w3-margin-bottom">View Certificate</a>
+          <a href="https://drive.google.com/file/d/1sJ4p2BCACl4KUlsreoNjLHT9EU8xatW3/view?usp=sharing" class="w3-bar-item w3-button w3-black w3-margin-top">View Certificate</a>
         </div>
       </div>
     </div>
