--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 
     <div class="w3-row-padding w3-padding-32" style="margin:0 -16px">
       <div class="w3-third w3-margin-bottom">
-        <img src="/images/SCL2.jpeg" alt="New York" style="width:100%" class="w3-hover-opacity">
+        <img src="/images/SCL2.jpeg" alt="New York" style="width:100%; height:130px;" class="w3-hover-opacity">
         <div class="w3-container w3-white" style="padding-bottom:20px;">
           <p><b>Shopee Code League 2022</b></p>
           <p class="w3-opacity">Shopee</p>
@@ -101,7 +101,7 @@
         </div>
       </div>
       <div class="w3-third w3-margin-bottom">
-        <img src="/images/INTU.png" alt="New York" style="width:100%" class="w3-hover-opacity">
+        <img src="/images/INTU.png" alt="New York" style="width:100%; height:130px;" class="w3-hover-opacity">
         <div class="w3-container w3-white">
           <p><b>INTUITION</b></p>
           <p class="w3-opacity">IEEE INTUITION v8.0 2022</p>
@@ -111,7 +111,7 @@
         </div>
       </div>
       <div class="w3-third w3-margin-bottom">
-        <img src="/images/DSTA.png" alt="New York" style="width:100%" class="w3-hover-opacity">
+        <img src="/images/DSTA.png" alt="New York" style="width:100%; height:130px;" class="w3-hover-opacity">
         <div class="w3-container w3-white">
           <p><b>Today-I-Learned</b></p>
           <p class="w3-opacity">DSTA, BRAINHACK 2021</p>
