--- a/index.html
+++ b/index.html
@@ -67,14 +67,14 @@
     <p class="w3-opacity w3-center"><i>A big thank you to every organisation for hiring me.</i></p><br>
     <div class="w3-row-padding w3-padding-32" style="margin:0 -16px">
       <div class="w3-third w3-margin-bottom">
-        <img src="/images/discover-market-logo-white-vertical.png" alt="DM Logo" style="width:100%" class="w3-hover-opacity">
+        <img src="/images/discover-market-logo-white-vertical.png" alt="DM Logo" style="width:100%; height:130px;" class="w3-hover-opacity">
         <br></br>
         <div class="w3-margin-top ">Software Engineer Intern </div>
         <div class="w3-margin-bottom">(May 2022 - July 2022)</div>
       </div>
       <div class="w3-third w3-margin-bottom">
         <br></br>
-        <img src="/images/DSTA_Logo.png" alt="DSTA Logo" style="width:100%" class="w3-hover-opacity">
+        <img src="/images/DSTA_Logo.png" alt="DSTA Logo" style="width:100%; height:130px;" class="w3-hover-opacity">
         <br></br>
         <div class="w3-margin-top">Algorithm Engineer Intern </div>
         <div class="w3-margin-bottom">(Aug 2022 - Jan 2023)</div>
@@ -102,7 +102,7 @@
       </div>
       <div class="w3-third w3-margin-bottom">
         <img src="/images/INTU.png" alt="New York" style="width:100%; height:130px;" class="w3-hover-opacity">
-        <div class="w3-container w3-white">
+        <div class="w3-container w3-white" style="padding-bottom:20px;">
           <p><b>INTUITION</b></p>
           <p class="w3-opacity">IEEE INTUITION v8.0 2022</p>
           <p>Group name: MC for ART. Telegram bot with google script API. CNN model launched in google cloud, 
@@ -112,7 +112,7 @@
       </div>
       <div class="w3-third w3-margin-bottom">
         <img src="/images/DSTA.png" alt="New York" style="width:100%; height:130px;" class="w3-hover-opacity">
-        <div class="w3-container w3-white">
+        <div class="w3-container w3-white" style="padding-bottom:20px;">
           <p><b>Today-I-Learned</b></p>
           <p class="w3-opacity">DSTA, BRAINHACK 2021</p>
           <p>Data preperation and cleaning, modified parameters for optimization. 
@@ -131,7 +131,7 @@
 
     <div class="w3-row-padding w3-padding-32" style="margin:0 -16px">
       <div class="w3-third w3-margin-bottom">
-        <img src="/images/TicTacToe.png" alt="New York" style="width:100%" class="w3-hover-opacity">
+        <img src="/images/TicTacToe.png" alt="New York" style="width:100%; height:130px;" class="w3-hover-opacity">
         <div class="w3-container w3-white">
           <p><b>Tic-Tac-Toe</b></p>
           <p class="w3-opacity">CS50x Harvard, Cambridge</p>
@@ -141,7 +141,7 @@
         </div>
       </div>
       <div class="w3-third w3-margin-bottom">
-        <img src="/images/Sudoku.jpeg" alt="Paris" style="width:100%" class="w3-hover-opacity">
+        <img src="/images/Sudoku.jpeg" alt="Paris" style="width:100%; height:130px;" class="w3-hover-opacity">
         <div class="w3-container w3-white">
           <p><b>Sudoku Auto-generation</b></p>
           <p class="w3-opacity">NTU</p>
@@ -150,7 +150,7 @@
         </div>
       </div>
       <div class="w3-third w3-margin-bottom">
-        <img src="/images/CrossyRoad.png" alt="San Francisco" style="width:100%" class="w3-hover-opacity">
+        <img src="/images/CrossyRoad.png" alt="San Francisco" style="width:100%; height:130px;" class="w3-hover-opacity">
         <div class="w3-container w3-white">
           <p><b>Crossy Road</b></p>
           <p class="w3-opacity">NTU</p>
@@ -162,7 +162,7 @@
     <!-- Second row of SWE -->
     <div class="w3-row-padding w3-padding-32" style="margin:0 -16px">
       <div class="w3-third w3-margin-bottom">
-        <img src="/images/ECommerce.jpg" alt="New York" style="width:100%" class="w3-hover-opacity">
+        <img src="/images/ECommerce.jpg" alt="New York" style="width:100%; height:130px;" class="w3-hover-opacity">
         <div class="w3-container w3-white">
           <p><b>E-commerce Website</b></p>
           <p class="w3-opacity">NTU</p>
@@ -171,7 +171,7 @@
         </div>
       </div>
       <div class="w3-third w3-margin-bottom">
-        <img src="/images/AndroidStudio.jpeg" alt="Paris" style="width:100%" class="w3-hover-opacity">
+        <img src="/images/AndroidStudio.jpeg" alt="Paris" style="width:100%; height:130px;" class="w3-hover-opacity">
         <div class="w3-container w3-white">
           <p><b>Covid-19 Application</b></p>
           <p class="w3-opacity">NTU</p>
@@ -180,7 +180,7 @@
         </div>
       </div>
       <div class="w3-third w3-margin-bottom">
-        <img src="/images/Twilio.png" alt="San Francisco" style="width:100%" class="w3-hover-opacity">
+        <img src="/images/Twilio.png" alt="San Francisco" style="width:100%; height:130px;" class="w3-hover-opacity">
         <div class="w3-container w3-white">
           <p><b>Twilio Chatbot</b></p>
           <p class="w3-opacity">Personal</p>
@@ -199,7 +199,7 @@
 
     <div class="w3-row-padding w3-padding-32" style="margin:0 -16px">
       <div class="w3-third w3-margin-bottom">
-        <img src="/images/AiTestKitchen.png" alt="Paris" style="width:100%" class="w3-hover-opacity">
+        <img src="/images/AiTestKitchen.png" alt="Paris" style="width:100%; height:130px;" class="w3-hover-opacity">
         <div class="w3-container w3-white">
           <p><b>AI Test Kitchen</b></p>
           <p class="w3-opacity">Google</p>
@@ -208,7 +208,7 @@
         </div>
       </div>
       <div class="w3-third w3-margin-bottom">
-        <img src="/images/NotNowLizards.jpeg" alt="Paris" style="width:100%" class="w3-hover-opacity">
+        <img src="/images/NotNowLizards.jpeg" alt="Paris" style="width:100%; height:130px;" class="w3-hover-opacity">
         <div class="w3-container w3-white">
           <p><b>Not now lizards!</b></p>
           <p class="w3-opacity">MLDA</p>
@@ -217,7 +217,7 @@
         </div>
       </div>
       <div class="w3-third w3-margin-bottom">
-        <img src="/images/Titanic.png" alt="San Francisco" style="width:100%" class="w3-hover-opacity">
+        <img src="/images/Titanic.png" alt="San Francisco" style="width:100%; height:130px;" class="w3-hover-opacity">
         <div class="w3-container w3-white">
           <p><b>Titanic Disaster Prediction</b></p>
           <p class="w3-opacity"></p>
@@ -229,7 +229,7 @@
     <!-- Second Row of ML -->
     <div class="w3-row-padding w3-padding-32" style="margin:0 -16px">
       <div class="w3-third w3-margin-bottom">
-        <img src="/images/MediaPipe.png" alt="San Francisco" style="width:100%" class="w3-hover-opacity">
+        <img src="/images/MediaPipe.png" alt="San Francisco" style="width:100%; height:130px;" class="w3-hover-opacity">
         <div class="w3-container w3-white">
           <p><b>Basic MediaPipe</b></p>
           <p class="w3-opacity"></p>
