--- a/index.html
+++ b/index.html
@@ -55,25 +55,22 @@
       <div class="typewriter">
         <h1> I think life is greater with Coding</h1>
       </div>
-      
-      <div class="w3-black" id="EXP">
-        <div class="w3-container w3-content w3-padding-64" style="max-width:800px">
-          <h2 class="w3-wide w3-center">INTERNSHIP EXPERIENCE</h2>
-          <p class="w3-opacity w3-center"><i>A big thank you to every organisation for hiring me.</i></p><br>
-          <div class="w3-row-padding w3-padding-32" style="margin:0 -16px">
-            <div class="w3-third w3-margin-bottom">
-              <img src="/images/discover-market-logo-white-vertical.png" alt="DM Logo" style="width:100%; height:130px;" class="w3-hover-opacity">
-              <br></br>
-              <div class="w3-margin-top ">Software Engineer Intern </div>
-              <div class="w3-margin-bottom">(May 2022 - July 2022)</div>
-            </div>
-            <div class="w3-third w3-margin-bottom">
-              <br></br>
-              <img src="/images/DSTA_Logo.png" alt="DSTA Logo" style="width:100%; height:130px;" class="w3-hover-opacity">
-              <br></br>
-              <div class="w3-margin-top">Algorithm Engineer Intern </div>
-              <div class="w3-margin-bottom">(Aug 2022 - Jan 2023)</div>
-            </div>
+      <div class="w3-container w3-content w3-padding-64" >
+        <h2 class="w3-wide w3-center">INTERNSHIP EXPERIENCE</h2>
+        <p class="w3-opacity w3-center"><i>A big thank you to every organisation for hiring me.</i></p><br>
+        <div class="w3-row-padding w3-padding-32" style="margin:0 -16px">
+          <div class="w3-third w3-margin-bottom">
+            <img src="/images/discover-market-logo-white-vertical.png" alt="DM Logo" style="width:100%; height:130px;" class="w3-hover-opacity">
+            <br></br>
+            <div class="w3-margin-top" style="color:white">Software Engineer Intern </div>
+            <div class="w3-margin-bottom" style="color:white">(May 2022 - July 2022)</div>
+          </div>
+          <div class="w3-third w3-margin-bottom">
+            <br></br>
+            <img src="/images/DSTA_Logo.png" alt="DSTA Logo" style="width:100%; height:130px;" class="w3-hover-opacity">
+            <br></br>
+            <div class="w3-margin-top" style="color:white">Algorithm Engineer Intern </div>
+            <div class="w3-margin-bottom" style="color:white">(Aug 2022 - Jan 2023)</div>
           </div>
         </div>
       </div>
