--- a/index.html
+++ b/index.html
@@ -55,6 +55,8 @@
       <div class="typewriter">
         <h1> I think life is greater with Coding</h1>
       </div>
+
+      <!--#EXP-->
       <div class="w3-container w3-content w3-padding-64" >
         <h2 class="w3-wide w3-center">INTERNSHIP EXPERIENCE</h2>
         <p class="w3-opacity w3-center"><i>A big thank you to every organisation for hiring me.</i></p><br>
@@ -71,6 +73,46 @@
             <br></br>
             <div class="w3-margin-top" style="color:white">Algorithm Engineer Intern </div>
             <div class="w3-margin-bottom" style="color:white">(Aug 2022 - Jan 2023)</div>
+          </div>
+        </div>
+      </div>
+      <!--#HACK-->
+      <div class="w3-black" id="HACK">
+        <div class="w3-container w3-content w3-padding-64" style="max-width:800px">
+          <h2 class="w3-wide w3-center">HACKATHONS!</h2>
+          <p class="w3-opacity w3-center"><i>Won some lost many</i></p><br>
+      
+          <div class="w3-row-padding w3-padding-32" style="margin:0 -16px">
+            <div class="w3-third w3-margin-bottom">
+              <img src="/images/SCL2.jpeg" alt="New York" style="width:100%; height:130px;" class="w3-hover-opacity">
+              <div class="w3-container w3-white" style="padding-bottom:20px;">
+                <p><b>Shopee Code League 2022</b></p>
+                <p class="w3-opacity">Shopee</p>
+                <p>Algorithm Challenge. Python and Java. BFS, DFS, Dijkstra, Greedy, 
+                  Longest common Subsequence. Participation. </p>
+                <a href="https://drive.google.com/file/d/1jW_Wr0YYpkZ3CUhi3cTAJGMwhrthuwLq/view?usp=sharing" class="w3-bar-item w3-button w3-black w3-margin-top">View Certificate</a>
+              </div>
+            </div>
+            <div class="w3-third w3-margin-bottom">
+              <img src="/images/INTU.png" alt="New York" style="width:100%; height:130px;" class="w3-hover-opacity">
+              <div class="w3-container w3-white" style="padding-bottom:20px;">
+                <p><b>INTUITION</b></p>
+                <p class="w3-opacity">IEEE INTUITION v8.0 2022</p>
+                <p>Group name: MC for ART. Telegram bot with google script API. CNN model launched in google cloud, 
+                  Image Classification, Keras image processing. First Place in Healthcare Category.</p>
+                <a href="https://drive.google.com/file/d/19cagHFVPoFpJ2CEOB6sP_PVJudmpgT_9/view" class="w3-bar-item w3-button w3-black w3-margin-top">View Certificate</a>
+              </div>
+            </div>
+            <div class="w3-third w3-margin-bottom">
+              <img src="/images/DSTA.png" alt="New York" style="width:100%; height:130px;" class="w3-hover-opacity">
+              <div class="w3-container w3-white" style="padding-bottom:20px;">
+                <p><b>Today-I-Learned</b></p>
+                <p class="w3-opacity">DSTA, BRAINHACK 2021</p>
+                <p>Data preperation and cleaning, modified parameters for optimization. 
+                  Utilized OpenCV and RESNET for our model to identify objects from Datasets. Ninth Overall</p>
+                <a href="https://drive.google.com/file/d/1sJ4p2BCACl4KUlsreoNjLHT9EU8xatW3/view?usp=sharing" class="w3-bar-item w3-button w3-black w3-margin-top">View Certificate</a>
+              </div>
+            </div>
           </div>
         </div>
       </div>
@@ -104,7 +146,7 @@
 </div> -->
 <!--#HACK-->
 <!--  https://drive.google.com/file/d/1zeqkRtUDyowKAIAN5D4iY8fd3IsRzNEB/view?usp=sharing-->
-<div class="w3-black" id="HACK">
+<!-- <div class="w3-black" id="HACK">
   <div class="w3-container w3-content w3-padding-64" style="max-width:800px">
     <h2 class="w3-wide w3-center">HACKATHONS!</h2>
     <p class="w3-opacity w3-center"><i>Won some lost many</i></p><br>
@@ -142,7 +184,7 @@
       </div>
     </div>
   </div>
-</div>
+</div> -->
 <!--#SWE-->
 <div class="w3-black" id="SWE">
   <div class="w3-container w3-content w3-padding-64" style="max-width:800px">
