--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
 
       <!--#EXP-->
       <div class="w3-container w3-content w3-padding-64" >
-        <h2 class="w3-wide w3-center">INTERNSHIP EXPERIENCE</h2>
-        <p class="w3-opacity w3-center"><i>A big thank you to every organisation for hiring me.</i></p><br>
+        <h2 class="w3-wide w3-center" style="color:white">INTERNSHIP EXPERIENCE</h2>
+        <p class="w3-opacity w3-center" style="color:white"><i>A big thank you to every organisation for hiring me.</i></p><br>
         <div class="w3-row-padding w3-padding-32" style="margin:0 -16px">
           <div class="w3-third w3-margin-bottom">
             <img src="/images/discover-market-logo-white-vertical.png" alt="DM Logo" style="width:100%; height:130px;" class="w3-hover-opacity">
