--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
       </div>
       <!--#HACK-->
       <div class="w3-container w3-content w3-padding-64">
-        <h2 class="w3-wide w3-center">HACKATHONS!</h2>
-        <p class="w3-opacity w3-center"><i>Won some lost many</i></p><br>
+        <h2 class="w3-wide w3-center" style="color:white">HACKATHONS!</h2>
+        <p class="w3-opacity w3-center" style="color:white"><i>Won some lost many</i></p><br>
     
         <div class="w3-row-padding w3-padding-32" style="margin:0 -16px">
           <div class="w3-third w3-margin-bottom">
