--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
 <div id="particles-js">
   <div class="w3-display-middle w3-panel w3-center" style="background-color: transparent">
-    <div class="centered" style="overflow:scroll">
+    <div class="centered" style="overflow:scroll; width:100%; height:1000px;">
       <div class="typewriter">
         <h1> I think life is greater with Coding</h1>
       </div>
@@ -109,6 +109,119 @@
               <p>Data preperation and cleaning, modified parameters for optimization. 
                 Utilized OpenCV and RESNET for our model to identify objects from Datasets. Ninth Overall</p>
               <a href="https://drive.google.com/file/d/1sJ4p2BCACl4KUlsreoNjLHT9EU8xatW3/view?usp=sharing" class="w3-bar-item w3-button w3-black w3-margin-top">View Certificate</a>
+            </div>
+          </div>
+        </div>
+        <!--#SWE-->
+        <div class="w3-container w3-content w3-padding-64">
+          <h2 class="w3-wide w3-center" style="color:white">SOFTWARE ENGINEERING PROJECTS</h2>
+          <p class="w3-opacity w3-center" style="color:white"><i>Tech Stacks: React, Spring, BootStrap... </i></p><br>
+      
+          <div class="w3-row-padding w3-padding-32" style="margin:0 -16px">
+            <div class="w3-third w3-margin-bottom">
+              <img src="/images/TicTacToe.png" alt="New York" style="width:100%; height:130px;" class="w3-hover-opacity">
+              <div class="w3-container w3-white">
+                <p><b>Tic-Tac-Toe</b></p>
+                <p class="w3-opacity">CS50x Harvard, Cambridge</p>
+                <p>Utilized Object Oriented Programming skills and built self-made sprites.(C,Love2D,Lua)</p>
+                <!-- <button class="w3-button w3-black w3-margin-bottom">View Project</button> -->
+                <a href="https://github.com/darren170999" class="w3-bar-item w3-button w3-black w3-margin-bottom">View Project</a>
+              </div>
+            </div>
+            <div class="w3-third w3-margin-bottom">
+              <img src="/images/Sudoku.jpeg" alt="Paris" style="width:100%; height:130px;" class="w3-hover-opacity">
+              <div class="w3-container w3-white">
+                <p><b>Sudoku Auto-generation</b></p>
+                <p class="w3-opacity">NTU</p>
+                <p>Customized Graphic User Interface. Created a puzzle generation feature.(Java)</p>
+                <a href="https://github.com/darren170999" class="w3-bar-item w3-button w3-black w3-margin-bottom">View Project</a>
+              </div>
+            </div>
+            <div class="w3-third w3-margin-bottom">
+              <img src="/images/CrossyRoad.png" alt="San Francisco" style="width:100%; height:130px;" class="w3-hover-opacity">
+              <div class="w3-container w3-white">
+                <p><b>Crossy Road</b></p>
+                <p class="w3-opacity">NTU</p>
+                <p>Modelled movements with C# scripts and appearance with Blender.(UNITY3D, Blender, C#)</p>
+                <a href="https://github.com/darren170999" class="w3-bar-item w3-button w3-black w3-margin-bottom">View Project</a>
+              </div>
+            </div>
+          </div>
+          <!-- Second row of SWE -->
+          <div class="w3-row-padding w3-padding-32" style="margin:0 -16px">
+            <div class="w3-third w3-margin-bottom">
+              <img src="/images/ECommerce.jpg" alt="New York" style="width:100%; height:130px;" class="w3-hover-opacity">
+              <div class="w3-container w3-white">
+                <p><b>E-commerce Website</b></p>
+                <p class="w3-opacity">NTU</p>
+                <p>MYSQL DataBase. Apache Tomcat servlets.(Apache Tomcat, JavaScript, HTML, CSS, MYSQL)</p>
+                <a href="https://github.com/darren170999" class="w3-bar-item w3-button w3-black w3-margin-bottom">View Project</a>
+              </div>
+            </div>
+            <div class="w3-third w3-margin-bottom">
+              <img src="/images/AndroidStudio.jpeg" alt="Paris" style="width:100%; height:130px;" class="w3-hover-opacity">
+              <div class="w3-container w3-white">
+                <p><b>Covid-19 Application</b></p>
+                <p class="w3-opacity">NTU</p>
+                <p>Firebase. MySQL DataBase. Linked pages with Apache Tomcat Servlets through IP configuration.(Android Studio, Kotlin, FireBase)</p>
+                <a href="https://github.com/darren170999" class="w3-bar-item w3-button w3-black w3-margin-bottom">View Project</a>
+              </div>
+            </div>
+            <div class="w3-third w3-margin-bottom">
+              <img src="/images/Twilio.png" alt="San Francisco" style="width:100%; height:130px;" class="w3-hover-opacity">
+              <div class="w3-container w3-white">
+                <p><b>Twilio Chatbot</b></p>
+                <p class="w3-opacity">Personal</p>
+                <p>Spring Framework with BootStrap, Postgres DataBase and Twilio interface.</p>
+                <button class="w3-button w3-black w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'">In Progress</button>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- ML -->
+        <div class="w3-container w3-content w3-padding-64">
+          <h3 class="w3-wide w3-center" style="color:white">MACHINE LEARNING PROJECTS</h3>
+          <p class="w3-opacity w3-center" style="color:white"><i>The all seeing eye of Coding</i></p><br>
+      
+          <div class="w3-row-padding w3-padding-32" style="margin:0 -16px">
+            <div class="w3-third w3-margin-bottom">
+              <img src="/images/AiTestKitchen.png" alt="Paris" style="width:100%; height:130px;" class="w3-hover-opacity">
+              <div class="w3-container w3-white">
+                <p><b>AI Test Kitchen</b></p>
+                <p class="w3-opacity">Google</p>
+                <p>Natural Language Processing</p>
+                <button class="w3-button w3-black w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'">In Progress</button>
+              </div>
+            </div>
+            <div class="w3-third w3-margin-bottom">
+              <img src="/images/NotNowLizards.jpeg" alt="Paris" style="width:100%; height:130px;" class="w3-hover-opacity">
+              <div class="w3-container w3-white">
+                <p><b>Not now lizards!</b></p>
+                <p class="w3-opacity">MLDA</p>
+                <p>Computer Vision, Arduino, ROS</p>
+                <button class="w3-button w3-black w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'">In Progress</button>
+              </div>
+            </div>
+            <div class="w3-third w3-margin-bottom">
+              <img src="/images/Titanic.png" alt="San Francisco" style="width:100%; height:130px;" class="w3-hover-opacity">
+              <div class="w3-container w3-white">
+                <p><b>Titanic Disaster Prediction</b></p>
+                <p class="w3-opacity"></p>
+                <p>ML models, Data cleaning, Variance Testing, Feature engineering, AutoML TPOT</p>
+                <a href="https://github.com/darren170999" class="w3-bar-item w3-button w3-black w3-margin-bottom">View Project</a>
+              </div>
+            </div>
+          </div>
+          <!-- Second Row of ML -->
+          <div class="w3-row-padding w3-padding-32" style="margin:0 -16px">
+            <div class="w3-third w3-margin-bottom">
+              <img src="/images/MediaPipe.png" alt="San Francisco" style="width:100%; height:130px;" class="w3-hover-opacity">
+              <div class="w3-container w3-white">
+                <p><b>Basic MediaPipe</b></p>
+                <p class="w3-opacity"></p>
+                <p>Computer Vision</p>
+                <button class="w3-button w3-black w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'">In Progress</button>
+              </div>
             </div>
           </div>
         </div>
@@ -186,7 +299,7 @@
   </div>
 </div> -->
 <!--#SWE-->
-<div class="w3-black" id="SWE">
+<!-- <div class="w3-black" id="SWE">
   <div class="w3-container w3-content w3-padding-64" style="max-width:800px">
     <h2 class="w3-wide w3-center">SOFTWARE ENGINEERING PROJECTS</h2>
     <p class="w3-opacity w3-center"><i>Tech Stacks: React, Spring, BootStrap... </i></p><br>
@@ -198,7 +311,6 @@
           <p><b>Tic-Tac-Toe</b></p>
           <p class="w3-opacity">CS50x Harvard, Cambridge</p>
           <p>Utilized Object Oriented Programming skills and built self-made sprites.(C,Love2D,Lua)</p>
-          <!-- <button class="w3-button w3-black w3-margin-bottom">View Project</button> -->
           <a href="https://github.com/darren170999" class="w3-bar-item w3-button w3-black w3-margin-bottom">View Project</a>
         </div>
       </div>
@@ -220,9 +332,9 @@
           <a href="https://github.com/darren170999" class="w3-bar-item w3-button w3-black w3-margin-bottom">View Project</a>
         </div>
       </div>
-    </div>
+    </div> -->
     <!-- Second row of SWE -->
-    <div class="w3-row-padding w3-padding-32" style="margin:0 -16px">
+    <!-- <div class="w3-row-padding w3-padding-32" style="margin:0 -16px">
       <div class="w3-third w3-margin-bottom">
         <img src="/images/ECommerce.jpg" alt="New York" style="width:100%; height:130px;" class="w3-hover-opacity">
         <div class="w3-container w3-white">
@@ -252,9 +364,9 @@
       </div>
     </div>
   </div>
-</div>
+</div> -->
   <!-- #ML -->
-<div class="w3-black" id="ML">
+<!-- <div class="w3-black" id="ML">
   <div class="w3-container w3-content w3-padding-64" style="max-width:800px">
     <h3 class="w3-wide w3-center">MACHINE LEARNING PROJECTS</h3>
     <p class="w3-opacity w3-center"><i>The all seeing eye of Coding</i></p><br>
@@ -288,7 +400,7 @@
         </div>
       </div>
     </div>
-    <!-- Second Row of ML -->
+
     <div class="w3-row-padding w3-padding-32" style="margin:0 -16px">
       <div class="w3-third w3-margin-bottom">
         <img src="/images/MediaPipe.png" alt="San Francisco" style="width:100%; height:130px;" class="w3-hover-opacity">
@@ -301,7 +413,7 @@
       </div>
     </div>
   </div>
-</div>
+</div> -->
 
   <!-- #CONTACT -->
 <div class="w3-black" id="CONTACT">
