--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
 <div id="particles-js">
   <div class="w3-display-middle w3-panel w3-center" style="background-color: transparent">
-    <div class="centered" style="overflow:scroll; width:100%; height:1000px;">
+    <div class="centered" style="overflow:scroll; width:100%; height:1000px; padding-top: 300px;">
       <div class="typewriter">
         <h1> I think life is greater with Coding</h1>
       </div>
